kubernetes_deploy/live/staging/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laa-fee-calculator
  namespace: laa-fee-calculator-staging
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 100%
  selector:
    matchLabels:
      app: laa-fee-calculator-app
  template:
    metadata:
      labels:
        app: laa-fee-calculator-app
    spec:
      containers:
      - name: app
        imagePullPolicy: Always
        image: 754256621582.dkr.ecr.eu-west-2.amazonaws.com/laa-get-paid/laa-fee-calculator:set-me
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /ping.json
            port: 8080
            httpHeaders:
              - name: Host
                value: localhost
          initialDelaySeconds: 15
          periodSeconds: 15
        livenessProbe:
          httpGet:
            port: 8080
            path: /ping.json
            httpHeaders:
              - name: Host
                value: localhost
          initialDelaySeconds: 15
          periodSeconds: 60
        securityContext:
          capabilities:
            drop:
            - ALL
          runAsNonRoot: true
          allowPrivilegeEscalation: false
          seccompProfile:
            type: RuntimeDefault
